# dictionary

./: CMakeLists.txt
src/: Application.vala  CMakeLists.txt  MainWindow.vala  dictionary-api.vala  dictionary.ui  gtk-dictionary.vala
src/Core/: Definition.vala  PearsonApiClient.vala
src/Views/: BookmarkView.vala  DefinitionView.vala  RecentView.vala  SearchView.vala  View.vala  WordListView.vala
src/Widgets/: WordListRow.vala
